# graph-coloring

./: .gitignore  Friends.csv  Kolorowanie.pptx  README.md  Wedding-seating-plan-Group-sizes.csv  Wedding-seating-plan.csv  Wedding-seating-plan.xlsx  pyproject.toml  visualization.ipynb
src/: draw_graphs.py  exact-coloring-backtracking.py  exact_coloring_backtracking.py  genetic-shuffling.py  genetic_shuffling.py  greedy-coloring-cuda.py  greedy_coloring_cuda.py  kempe-swaps.py  kempe_swaps.py  main.py
wedding_seating/: draw_graphs.py  greedy_coloring_cuda.py  main.py
